--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-fast-compare": "^2.0.4",
     "react-wait": "^0.3.0",
     "screenfull": "^4.1.0",
+    "set-harmonic-interval": "^1.0.0",
     "throttle-debounce": "^2.0.1",
     "ts-easing": "^0.2.0"
   },
@@ -89,7 +90,6 @@
     "raf-stub": "3.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-frame-component": "^4.1.1",
     "react-spring": "8.0.27",
     "react-test-renderer": "16.9.0",
     "rebound": "0.1.0",
