--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "11.1.0",
+  "version": "11.1.1",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -90,6 +90,7 @@
     "raf-stub": "3.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-frame-component": "^4.1.1",
     "react-spring": "8.0.27",
     "react-test-renderer": "16.9.0",
     "rebound": "0.1.0",
