--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "11.0.0",
+  "version": "11.3.2",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -50,8 +50,8 @@
     "nano-css": "^5.1.0",
     "react-fast-compare": "^2.0.4",
     "react-wait": "^0.3.0",
-    "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^4.1.0",
+    "set-harmonic-interval": "^1.0.0",
     "throttle-debounce": "^2.0.1",
     "ts-easing": "^0.2.0"
   },
@@ -84,12 +84,13 @@
     "husky": "3.0.4",
     "jest": "24.9.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "9.2.3",
+    "lint-staged": "9.2.5",
     "markdown-loader": "5.1.0",
     "prettier": "1.18.2",
     "raf-stub": "3.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-frame-component": "4.1.1",
     "react-spring": "8.0.27",
     "react-test-renderer": "16.9.0",
     "rebound": "0.1.0",
