--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "screenfull": "^4.1.0",
     "set-harmonic-interval": "^1.0.0",
     "throttle-debounce": "^2.0.1",
-    "ts-easing": "^0.2.0",
-    "tslib": "^1.10.0"
+    "ts-easing": "^0.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -102,7 +101,7 @@
     "rxjs": "6.5.3",
     "semantic-release": "15.13.24",
     "ts-loader": "6.1.0",
-    "ts-node": "8.3.0",
+    "ts-node": "8.4.1",
     "tslint": "5.20.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
