--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "outDir": "lib",
-    "lib": ["es2018", "dom"],
-    "importHelpers": true
+    "lib": ["es2018", "dom"]
   },
   "exclude": [
     "node_modules",
