--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.0",
     "throttle-debounce": "^2.0.1",
-    "ts-easing": "^0.2.0"
+    "ts-easing": "^0.2.0",
+    "tslib": "^1.10.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -76,7 +77,7 @@
     "@storybook/addon-options": "5.1.11",
     "@storybook/react": "5.1.11",
     "@testing-library/react-hooks": "2.0.3",
-    "@types/jest": "24.0.18",
+    "@types/jest": "24.0.19",
     "@types/react": "16.9.2",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
