--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.0",
     "throttle-debounce": "^2.0.1",
-    "ts-easing": "^0.2.0",
-    "tslib": "^1.10.0"
+    "ts-easing": "^0.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -82,7 +81,7 @@
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
-    "fork-ts-checker-webpack-plugin": "1.5.1",
+    "fork-ts-checker-webpack-plugin": "1.5.0",
     "gh-pages": "2.1.1",
     "husky": "3.0.9",
     "jest": "24.9.0",
