--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "gh-pages": "2.1.1",
     "husky": "3.1.0",
     "jest": "24.9.0",
-    "jest-localstorage-mock": "^2.4.0",
     "keyboardjs": "2.5.1",
     "lint-staged": "9.4.3",
     "markdown-loader": "5.1.0",
@@ -155,7 +154,7 @@
     "clearMocks": true,
     "coverageDirectory": "coverage",
     "testMatch": [
-      "<rootDir>/tests/**/*.test.ts"
+      "<rootDir>/tests/**/*.test.(ts|tsx)"
     ]
   }
 }
