--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "clearMocks": true,
     "coverageDirectory": "coverage",
     "testMatch": [
-      "<rootDir>/tests/**/*.test.(ts|tsx)"
+      "<rootDir>/tests/**/*.test.ts"
     ]
   }
 }
