--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "13.14.3",
+  "version": "14.0.0-alpha.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -48,7 +48,7 @@
   "dependencies": {
     "@xobotyi/scrollbar-width": "1.5.0",
     "copy-to-clipboard": "^3.2.0",
-    "fast-shallow-equal": "^1.0.0",
+    "fast-shallow-equal": "^0.1.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
     "resize-observer-polyfill": "^1.5.1",
@@ -71,7 +71,7 @@
     "@semantic-release/changelog": "3.0.6",
     "@semantic-release/git": "7.0.18",
     "@semantic-release/npm": "5.3.5",
-    "@shopify/jest-dom-mocks": "2.8.8",
+    "@shopify/jest-dom-mocks": "2.8.7",
     "@storybook/addon-actions": "5.2.8",
     "@storybook/addon-knobs": "5.2.8",
     "@storybook/addon-notes": "5.2.8",
@@ -84,7 +84,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "fork-ts-checker-webpack-plugin": "3.1.1",
-    "gh-pages": "2.2.0",
+    "gh-pages": "2.1.1",
     "husky": "3.1.0",
     "jest": "24.9.0",
     "keyboardjs": "2.5.1",
@@ -103,7 +103,7 @@
     "rimraf": "3.0.0",
     "rxjs": "6.5.4",
     "semantic-release": "15.14.0",
-    "ts-jest": "24.3.0",
+    "ts-jest": "24.2.0",
     "ts-loader": "6.2.1",
     "ts-node": "8.5.4",
     "tslint": "6.0.0-beta1",
@@ -144,7 +144,7 @@
     ]
   },
   "volta": {
-    "node": "10.18.1",
+    "node": "10.18.0",
     "yarn": "1.21.1"
   },
   "collective": {
