--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "14.0.0-alpha.1",
+  "version": "13.14.3",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -51,7 +51,6 @@
     "fast-shallow-equal": "^1.0.0",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
-    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -66,7 +65,7 @@
   "devDependencies": {
     "@babel/core": "7.8.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.0",
-    "@babel/preset-env": "7.8.0",
+    "@babel/preset-env": "7.8.2",
     "@babel/preset-react": "7.8.0",
     "@babel/preset-typescript": "7.8.0",
     "@semantic-release/changelog": "3.0.6",
@@ -158,9 +157,6 @@
     "coverageDirectory": "coverage",
     "testMatch": [
       "<rootDir>/tests/**/*.test.(ts|tsx)"
-    ],
-    "setupFiles": [
-      "<rootDir>/tests/_setup.js"
     ]
   }
 }
