--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "13.15.0",
+  "version": "13.14.3",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -49,7 +49,6 @@
     "@xobotyi/scrollbar-width": "1.5.0",
     "copy-to-clipboard": "^3.2.0",
     "fast-shallow-equal": "^1.0.0",
-    "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
     "resize-observer-polyfill": "^1.5.1",
@@ -78,9 +77,9 @@
     "@storybook/addon-notes": "5.3.1",
     "@storybook/addon-options": "5.3.1",
     "@storybook/react": "5.3.1",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "24.0.25",
-    "@types/js-cookie": "^2.2.4",
     "@types/react": "16.9.11",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
