--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "14.0.0-alpha.2",
+  "version": "13.19.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -53,7 +53,6 @@
     "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
-    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -75,11 +74,11 @@
     "@semantic-release/git": "7.0.18",
     "@semantic-release/npm": "5.3.5",
     "@shopify/jest-dom-mocks": "2.8.8",
-    "@storybook/addon-actions": "5.3.5",
-    "@storybook/addon-knobs": "5.3.5",
-    "@storybook/addon-notes": "5.3.5",
-    "@storybook/addon-options": "5.3.5",
-    "@storybook/react": "5.3.5",
+    "@storybook/addon-actions": "5.3.6",
+    "@storybook/addon-knobs": "5.3.6",
+    "@storybook/addon-notes": "5.3.6",
+    "@storybook/addon-options": "5.3.6",
+    "@storybook/react": "5.3.6",
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "24.9.0",
     "@types/react": "16.9.11",
@@ -163,7 +162,6 @@
       "<rootDir>/tests/**/*.test.(ts|tsx)"
     ],
     "setupFiles": [
-      "<rootDir>/tests/_setup.js",
       "./tests/setupTests.ts"
     ]
   }
