--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "13.17.0",
+  "version": "14.0.0-alpha.1",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -53,6 +53,7 @@
     "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
+    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -74,11 +75,11 @@
     "@semantic-release/git": "7.0.18",
     "@semantic-release/npm": "5.3.5",
     "@shopify/jest-dom-mocks": "2.8.8",
-    "@storybook/addon-actions": "5.3.3",
-    "@storybook/addon-knobs": "5.3.3",
-    "@storybook/addon-notes": "5.3.3",
-    "@storybook/addon-options": "5.3.3",
-    "@storybook/react": "5.3.3",
+    "@storybook/addon-actions": "5.3.5",
+    "@storybook/addon-knobs": "5.3.5",
+    "@storybook/addon-notes": "5.3.5",
+    "@storybook/addon-options": "5.3.5",
+    "@storybook/react": "5.3.5",
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "24.9.0",
     "@types/react": "16.9.11",
@@ -89,6 +90,7 @@
     "gh-pages": "2.2.0",
     "husky": "3.1.0",
     "jest": "24.9.0",
+    "jest-localstorage-mock": "2.4.0",
     "keyboardjs": "2.5.1",
     "lint-staged": "9.5.0",
     "markdown-loader": "5.1.0",
@@ -113,7 +115,7 @@
     "tslint-eslint-rules": "5.4.0",
     "tslint-plugin-prettier": "2.1.0",
     "tslint-react": "4.1.0",
-    "typescript": "3.7.4"
+    "typescript": "3.7.5"
   },
   "config": {
     "commitizen": {
@@ -159,6 +161,10 @@
     "coverageDirectory": "coverage",
     "testMatch": [
       "<rootDir>/tests/**/*.test.(ts|tsx)"
+    ],
+    "setupFiles": [
+      "<rootDir>/tests/_setup.js",
+      "./tests/setupTests.ts"
     ]
   }
 }
