--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "14.0.0-alpha.3",
+  "version": "13.24.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -16,7 +16,7 @@
     "test": "jest --maxWorkers 2",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "tslint '{src,tests}/**/*.{ts,tsx}' -t verbose",
+    "lint": "eslint '{src,tests}/**/*.{ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "lint:types": "tsc --noEmit",
     "build:cjs": "tsc",
@@ -53,7 +53,6 @@
     "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
-    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -84,10 +83,20 @@
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "25.1.1",
     "@types/react": "16.9.11",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-core": "6.26.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "fork-ts-checker-webpack-plugin": "4.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "gh-pages": "2.2.0",
     "husky": "4.2.1",
     "jest": "25.1.0",
@@ -111,11 +120,6 @@
     "ts-jest": "25.2.0",
     "ts-loader": "6.2.1",
     "ts-node": "8.6.2",
-    "tslint": "6.0.0-beta1",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-eslint-rules": "5.4.0",
-    "tslint-plugin-prettier": "2.1.0",
-    "tslint-react": "4.1.0",
     "typescript": "3.7.5"
   },
   "config": {
@@ -144,7 +148,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "tslint --fix -t verbose",
+      "eslint --fix",
       "git add"
     ]
   },
@@ -164,7 +168,7 @@
       "<rootDir>/tests/**/*.test.(ts|tsx)"
     ],
     "setupFiles": [
-      "<rootDir>/tests/_setup.js"
+      "./tests/setupTests.ts"
     ]
   }
 }
