--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "rimraf": "3.0.1",
     "rxjs": "6.5.4",
     "semantic-release": "17.0.2",
-    "ts-jest": "25.1.0",
+    "ts-jest": "25.2.0",
     "ts-loader": "6.2.1",
     "ts-node": "8.6.2",
     "tslint": "6.0.0-beta1",
@@ -160,6 +160,9 @@
     "coverageDirectory": "coverage",
     "testMatch": [
       "<rootDir>/tests/**/*.test.(ts|tsx)"
+    ],
+    "setupFiles": [
+      "./tests/setupTests.ts"
     ]
   }
 }
