--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "14.0.0-alpha.2",
+  "version": "13.12.2",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -46,14 +46,10 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
-    "@types/js-cookie": "2.2.4",
-    "@xobotyi/scrollbar-width": "1.8.2",
+    "@xobotyi/scrollbar-width": "1.5.0",
     "copy-to-clipboard": "^3.2.0",
-    "fast-shallow-equal": "^1.0.0",
-    "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
     "react-fast-compare": "^2.0.4",
-    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -66,33 +62,32 @@
     "react-dom": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-react": "7.8.3",
-    "@babel/preset-typescript": "7.8.3",
-    "@semantic-release/changelog": "5.0.0",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/npm": "7.0.2",
-    "@shopify/jest-dom-mocks": "2.8.9",
-    "@storybook/addon-actions": "5.3.9",
-    "@storybook/addon-knobs": "5.3.9",
-    "@storybook/addon-notes": "5.3.9",
-    "@storybook/addon-options": "5.3.9",
-    "@storybook/react": "5.3.9",
+    "@babel/core": "7.7.5",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/preset-env": "7.7.6",
+    "@babel/preset-react": "7.7.4",
+    "@babel/preset-typescript": "7.7.4",
+    "@semantic-release/changelog": "3.0.6",
+    "@semantic-release/git": "7.0.18",
+    "@semantic-release/npm": "5.3.4",
+    "@shopify/jest-dom-mocks": "2.8.7",
+    "@storybook/addon-actions": "5.2.8",
+    "@storybook/addon-knobs": "5.2.8",
+    "@storybook/addon-notes": "5.2.8",
+    "@storybook/addon-options": "5.2.8",
+    "@storybook/react": "5.2.8",
     "@testing-library/react-hooks": "3.2.1",
-    "@types/jest": "25.1.1",
+    "@types/jest": "24.0.23",
     "@types/react": "16.9.11",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
-    "fork-ts-checker-webpack-plugin": "4.0.3",
-    "gh-pages": "2.2.0",
-    "husky": "4.2.1",
-    "jest": "25.1.0",
-    "jest-localstorage-mock": "2.4.0",
+    "fork-ts-checker-webpack-plugin": "3.1.1",
+    "gh-pages": "2.1.1",
+    "husky": "3.1.0",
+    "jest": "24.9.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "10.0.7",
+    "lint-staged": "9.5.0",
     "markdown-loader": "5.1.0",
     "prettier": "1.19.1",
     "raf-stub": "3.0.0",
@@ -104,18 +99,18 @@
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "rimraf": "3.0.1",
-    "rxjs": "6.5.4",
-    "semantic-release": "17.0.2",
-    "ts-jest": "25.2.0",
+    "rimraf": "3.0.0",
+    "rxjs": "6.5.3",
+    "semantic-release": "15.13.31",
+    "ts-jest": "24.2.0",
     "ts-loader": "6.2.1",
-    "ts-node": "8.6.2",
+    "ts-node": "8.5.4",
     "tslint": "6.0.0-beta1",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
-    "tslint-plugin-prettier": "2.1.0",
+    "tslint-plugin-prettier": "2.0.1",
     "tslint-react": "4.1.0",
-    "typescript": "3.7.5"
+    "typescript": "3.7.3"
   },
   "config": {
     "commitizen": {
@@ -148,7 +143,7 @@
     ]
   },
   "volta": {
-    "node": "10.18.1",
+    "node": "10.17.0",
     "yarn": "1.21.1"
   },
   "collective": {
@@ -161,9 +156,6 @@
     "coverageDirectory": "coverage",
     "testMatch": [
       "<rootDir>/tests/**/*.test.(ts|tsx)"
-    ],
-    "setupFiles": [
-      "<rootDir>/tests/_setup.js"
     ]
   }
 }
