--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest --maxWorkers 2",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint {src,tests}/**/*.{ts,tsx}",
+    "lint": "eslint '{src,tests}/**/*.{ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "lint:types": "tsc --noEmit",
     "build:cjs": "tsc",
@@ -74,12 +74,12 @@
     "@semantic-release/git": "9.0.0",
     "@semantic-release/npm": "7.0.5",
     "@shopify/jest-dom-mocks": "2.8.11",
-    "@storybook/addon-actions": "5.3.17",
-    "@storybook/addon-knobs": "5.3.17",
-    "@storybook/addon-notes": "5.3.17",
-    "@storybook/addon-options": "5.3.17",
-    "@storybook/react": "5.3.17",
-    "@testing-library/react": "9.5.0",
+    "@storybook/addon-actions": "5.3.18",
+    "@storybook/addon-knobs": "5.3.18",
+    "@storybook/addon-notes": "5.3.18",
+    "@storybook/addon-options": "5.3.18",
+    "@storybook/react": "5.3.18",
+    "@testing-library/react": "10.0.2",
     "@testing-library/react-hooks": "3.2.1",
     "@types/jest": "25.1.4",
     "@types/react": "16.9.11",
@@ -95,16 +95,16 @@
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.1",
+    "eslint-plugin-react-hooks": "3.0.0",
     "fork-ts-checker-webpack-plugin": "4.1.2",
     "gh-pages": "2.2.0",
     "husky": "4.2.3",
     "jest": "25.2.4",
     "jest-localstorage-mock": "2.4.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "10.1.0",
+    "lint-staged": "10.1.1",
     "markdown-loader": "5.1.0",
-    "prettier": "1.19.1",
+    "prettier": "2.0.2",
     "raf-stub": "3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
