--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fast-shallow-equal": "^1.0.0",
     "js-cookie": "^2.2.1",
     "nano-css": "^5.2.1",
+    "react-universal-interface": "^0.6.0",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^5.0.0",
     "set-harmonic-interval": "^1.0.1",
@@ -91,7 +92,7 @@
     "babel-plugin-dynamic-import-node": "2.3.3",
     "eslint": "6.8.0",
     "eslint-config-react-app": "5.2.1",
-    "eslint-plugin-flowtype": "5.0.3",
+    "eslint-plugin-flowtype": "4.7.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.20.0",
