--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0  || ^17.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -100,7 +100,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "fork-ts-checker-webpack-plugin": "5.2.1",
     "gh-pages": "3.1.0",
-    "husky": "4.3.6",
+    "husky": "4.3.7",
     "jest": "26.6.3",
     "jest-localstorage-mock": "2.4.6",
     "keyboardjs": "2.6.4",
