--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
-    "@types/js-cookie": "^2.2.6",
     "@xobotyi/scrollbar-width": "^1.9.5",
     "copy-to-clipboard": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
@@ -84,6 +83,7 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "5.1.0",
     "@types/jest": "26.0.20",
+    "@types/js-cookie": "2.2.6",
     "@types/react": "17.0.0",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
@@ -100,7 +100,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "fork-ts-checker-webpack-plugin": "6.1.0",
+    "fork-ts-checker-webpack-plugin": "6.1.1",
     "gh-pages": "3.1.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
