--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "17.1.0",
+  "version": "17.2.3",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -47,6 +47,7 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@xobotyi/scrollbar-width": "^1.9.5",
     "copy-to-clipboard": "^3.3.1",
     "fast-deep-equal": "^3.1.3",
@@ -66,65 +67,64 @@
     "react-dom": "^16.8.0  || ^17.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
+    "@babel/core": "7.13.14",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.12.13",
-    "@babel/preset-react": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
+    "@babel/preset-env": "7.13.12",
+    "@babel/preset-react": "7.13.13",
+    "@babel/preset-typescript": "7.13.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
-    "@semantic-release/npm": "7.0.10",
-    "@shopify/jest-dom-mocks": "2.11.0",
-    "@storybook/addon-actions": "6.1.16",
-    "@storybook/addon-knobs": "6.1.16",
+    "@semantic-release/npm": "7.1.0",
+    "@shopify/jest-dom-mocks": "2.11.3",
+    "@storybook/addon-actions": "6.2.3",
+    "@storybook/addon-knobs": "6.2.3",
     "@storybook/addon-notes": "5.3.21",
     "@storybook/addon-options": "5.3.21",
-    "@storybook/react": "6.1.16",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/react-hooks": "5.0.3",
-    "@types/jest": "26.0.20",
-    "@types/js-cookie": "2.2.6",
+    "@storybook/react": "6.2.3",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/react-hooks": "5.1.1",
+    "@types/jest": "26.0.22",
     "@types/react": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
+    "@typescript-eslint/eslint-plugin": "4.21.0",
+    "@typescript-eslint/parser": "4.21.0",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
-    "eslint": "7.19.0",
+    "eslint": "7.23.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-flowtype": "5.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "fork-ts-checker-webpack-plugin": "6.1.0",
+    "fork-ts-checker-webpack-plugin": "6.2.0",
     "gh-pages": "3.1.0",
-    "husky": "4.3.8",
+    "husky": "6.0.0",
     "jest": "26.6.3",
-    "jest-localstorage-mock": "2.4.6",
+    "jest-localstorage-mock": "2.4.8",
     "keyboardjs": "2.6.4",
-    "lint-staged": "10.5.3",
+    "lint-staged": "10.5.4",
     "markdown-loader": "6.0.0",
     "prettier": "2.2.1",
     "raf-stub": "3.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-frame-component": "4.1.3",
-    "react-spring": "8.0.27",
-    "react-test-renderer": "17.0.1",
+    "react-spring": "9.0.0",
+    "react-test-renderer": "17.0.2",
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "rimraf": "3.0.2",
-    "rxjs": "6.6.3",
-    "semantic-release": "17.3.7",
-    "ts-jest": "26.5.0",
-    "ts-loader": "8.0.14",
+    "rxjs": "6.6.7",
+    "semantic-release": "17.4.2",
+    "ts-jest": "26.5.4",
+    "ts-loader": "8.1.0",
     "ts-node": "9.1.1",
-    "typescript": "4.1.3"
+    "typescript": "4.1.5"
   },
   "config": {
     "commitizen": {
@@ -157,7 +157,7 @@
     ]
   },
   "volta": {
-    "node": "10.23.1",
+    "node": "14.16.0",
     "yarn": "1.22.10"
   },
   "collective": {
