--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "17.3.2",
+  "version": "17.3.3",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -63,8 +63,8 @@
     "tslib": "^2.1.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
@@ -122,7 +122,7 @@
     "rxjs": "7.4.0",
     "semantic-release": "17.4.7",
     "ts-jest": "26.5.6",
-    "ts-loader": "9.2.6",
+    "ts-loader": "~8.2.0",
     "ts-node": "10.4.0",
     "typescript": "4.1.5"
   },
